# thousand-faces

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml  requirements-dev.txt  requirements.txt
agents/: openai.yaml
plan/: PLAN.md  RELEASE_AUDIT.md  TODO.md
references/: config.example.env  configuration.md  host_refinement.md  pipeline.md  settings.schema.json  versioning.md
scripts/: artifacts.py  asr_parsers.py  build_creator_skill.py  config_check.py  content_safety.py  corpus.py  creator_media.py  creator_metadata.py  creator_pipeline.py  creator_quality.py  dashscope_polling.py  entity_review.py  evidence_model.py  generate_config_docs.py  input_validation.py  io_utils.py  logging_utils.py  media_validation.py  network_policy.py  offline_scenarios.py  oss_lifecycle.py  path_policy.py  pipeline_models.py  prepare_host_refinement.py  provenance.py  provider_adapters.py  quality_engine.py  redaction.py  refinement_common.py  refinement_coverage.py  refinement_schemas.py  refinement_signals.py  refinement_templates.py  research_taxonomy.py  resume_creator_run.py  retention.py  retry_policy.py  run_creator_skill_build.py  run_diagnostics.py  schema_validation.py  (+8 more)
tests/: conftest.py  test_artifact_manifest.py  test_asr_parsers.py  test_atomic_io.py  test_audio_chunking.py  test_ci_workflow.py  test_cli_validation.py  test_compact_metadata.py  test_config_docs_sync.py  test_creator_pipeline_architecture.py  test_cross_platform_typing.py  test_documentation_contract.py  test_fixtures.py  (+18 more)
(+70 files in other folders)
