[project]
name = "thousand-faces-style-skill"
version = "0.1.0"
description = "Evidence-based creator style research and Creator Skill generation pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["creator-skill", "style-research", "douyin", "asr"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

# Runtime dependencies intentionally remain in requirements.txt so CLI users
# and the development environment install the same provider and analysis stack.

[tool.pytest.ini_options]
minversion = "8.3"
addopts = ["-ra", "--strict-config", "--strict-markers"]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["runs", "output", "logs"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.11"
files = ["scripts"]
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
pretty = true

[tool.coverage.run]
branch = true
source = ["scripts"]

[tool.coverage.report]
show_missing = true
skip_covered = true
